# KTagebuch

./: CMakeLists.txt  KTagebuch.kdev4  README
doc/: CMakeLists.txt  index.docbook
icons/: CMakeLists.txt
src/: CMakeLists.txt  Messages.sh  ktagebuch.cpp  ktagebuch.desktop  ktagebuch.h  ktagebuch.kcfg  ktagebuchui.rc  ktagebuchview.cpp  ktagebuchview.h  ktagebuchview_base.ui  main.cpp  prefs_base.ui  prefs_colors.ui  prefs_font.ui  settings.kcfgc
src/fs/: filesystem.cpp  filesystem.h
src/plugins/mood/: mood.loT  mood.plugin  moodplugin.cpp  moodplugin.h  moodpluginui.cpp  moodpluginui.h  moodpluginui.ui  moodpluginui.ui.h  moodprefs.cpp  moodprefs.h
